python/testData/quickFixes/PyWrapInExceptionQuickFixTest/inFunction.py
def foo():
    raise <error descr="Raising a string exception">"String"<caret> "String1"</error>